--- a/index.html
+++ b/index.html
@@ -53,6 +53,27 @@
                 document.getElementById(`timer-container-${index}`).classList.add("selected");
             }
 
+            window.startTimer = function() {
+                if (selectedTimer !== null && intervals[selectedTimer] === null) {
+                    intervals[selectedTimer] = setInterval(() => {
+                        if (timers[selectedTimer] > 0) {
+                            timers[selectedTimer]--;
+                            updateDisplay();
+                            syncWithDatabase();
+                        } else {
+                            stopTimer();
+                        }
+                    }, 1000);
+                }
+            }
+
+            window.stopTimer = function() {
+                if (selectedTimer !== null) {
+                    clearInterval(intervals[selectedTimer]);
+                    intervals[selectedTimer] = null;
+                }
+            }
+
             window.adjustTime = function(amount) {
                 if (selectedTimer !== null) {
                     timers[selectedTimer] += amount;
@@ -66,6 +87,21 @@
                 timers = [60, 60, 60, 60];
                 updateDisplay();
                 syncWithDatabase();
+            }
+
+            window.toggleTimerVisibility = function() {
+                let selectedIndex = document.getElementById("timerSelect").value;
+                visibleTimers[selectedIndex] = !visibleTimers[selectedIndex];
+                updateDisplay();
+            }
+
+            window.setCustomTime = function() {
+                let newTime = parseInt(document.getElementById("timeInput").value);
+                if (!isNaN(newTime) && selectedTimer !== null) {
+                    timers[selectedTimer] = newTime;
+                    updateDisplay();
+                    syncWithDatabase();
+                }
             }
 
             document.querySelectorAll(".timer").forEach((timerElement, index) => {
@@ -116,7 +152,7 @@
             for (let i = 0; i < 4; i++) {
                 document.write(`
                     <div class="timer" data-index="${i}" id="timer-container-${i}">
-                        <input type="text" id="teamName${i}" class="team-name" value="Team ${i + 1}" readonly>
+                        <div class="team-name" id="teamName${i}">Team ${i + 1}</div>
                         <div class="time" id="timer${i}">60</div>
                     </div>
                 `);
@@ -124,13 +160,24 @@
         </script>
     </div>
     <div class="controls">
+        <button onclick="startTimer()">Start</button>
+        <button onclick="stopTimer()">Stop</button>
+        <button onclick="resetTimer()">Reset</button>
         <button onclick="adjustTime(10)">+10 sec</button>
         <button onclick="adjustTime(20)">+20 sec</button>
         <button onclick="adjustTime(30)">+30 sec</button>
         <button onclick="adjustTime(40)">+40 sec</button>
         <button onclick="adjustTime(50)">+50 sec</button>
         <button onclick="adjustTime(-20)">-20 sec</button>
-        <button onclick="resetTimer()">Reset</button>
+        <select id="timerSelect">
+            <option value="0">Timer 1</option>
+            <option value="1">Timer 2</option>
+            <option value="2">Timer 3</option>
+            <option value="3">Timer 4</option>
+        </select>
+        <button onclick="toggleTimerVisibility()">Toon/Verberg Timer</button>
+        <input type="number" id="timeInput" placeholder="Seconden invoeren">
+        <button onclick="setCustomTime()">Instellen</button>
     </div>
 </body>
 </html>
