--- a/index.html
+++ b/index.html
@@ -121,17 +121,21 @@
         }
         .timer {
             background: white;
-            padding: 30px;
+            padding: 40px;
             border-radius: 10px;
             box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
-            width: 180px;
-            text-align: center;
+            width: 200px;
+            height: 150px;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
         }
         .team-name {
             font-size: 20px;
             font-weight: bold;
             text-align: center;
-            margin-bottom: 10px;
+            width: 100%;
         }
         .selected {
             border: 3px solid red;
