--- a/index.html
+++ b/index.html
@@ -99,6 +99,15 @@
                 }
             }
 
+            document.querySelectorAll(".team-name").forEach(input => {
+                input.addEventListener("blur", (event) => {
+                    event.target.setAttribute("readonly", true);
+                });
+                input.addEventListener("dblclick", (event) => {
+                    event.target.removeAttribute("readonly");
+                });
+            });
+
             document.querySelectorAll(".timer").forEach((timerElement, index) => {
                 timerElement.addEventListener("click", () => {
                     selectTimer(index);
@@ -124,8 +133,8 @@
             padding: 40px;
             border-radius: 10px;
             box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
-            width: 200px;
-            height: 150px;
+            width: 220px;
+            height: 180px;
             display: flex;
             flex-direction: column;
             align-items: center;
@@ -136,6 +145,17 @@
             font-weight: bold;
             text-align: center;
             width: 100%;
+            border: none;
+            background: transparent;
+            text-align: center;
+            outline: none;
+        }
+        .time {
+            font-size: 50px;
+            font-weight: bold;
+            text-align: center;
+            margin-top: 10px;
+            color: red;
         }
         .selected {
             border: 3px solid red;
@@ -175,29 +195,7 @@
             }
         </script>
     </div>
-    <div class="controls">
-        <div class="row">
-            <button onclick="startTimer()">Start</button>
-            <button onclick="stopTimer()">Stop</button>
-            <button onclick="resetTimer()">Reset</button>
-            <button onclick="adjustTime(10)">+10 sec</button>
-            <button onclick="adjustTime(20)">+20 sec</button>
-            <button onclick="adjustTime(30)">+30 sec</button>
-            <button onclick="adjustTime(40)">+40 sec</button>
-            <button onclick="adjustTime(50)">+50 sec</button>
-            <button onclick="adjustTime(-20)">-20 sec</button>
-        </div>
-        <div class="row">
-            <select id="timerSelect">
-                <option value="0">Timer 1</option>
-                <option value="1">Timer 2</option>
-                <option value="2">Timer 3</option>
-                <option value="3">Timer 4</option>
-            </select>
-            <button onclick="toggleTimerVisibility()">Toon/Verberg Timer</button>
-            <input type="number" id="timeInput" placeholder="Seconden invoeren">
-            <button onclick="setCustomTime()">Instellen</button>
-        </div>
-    </div>
+</body>
+</html>
 </body>
 </html>
