--- a/index.html
+++ b/index.html
@@ -101,9 +101,11 @@
 
             document.querySelectorAll(".team-name").forEach(input => {
                 input.addEventListener("blur", (event) => {
+                    event.target.style.border = "none";
                     event.target.setAttribute("readonly", true);
                 });
                 input.addEventListener("dblclick", (event) => {
+                    event.target.style.border = "1px solid black";
                     event.target.removeAttribute("readonly");
                 });
             });
@@ -134,27 +136,26 @@
             border-radius: 10px;
             box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
             width: 220px;
-            height: 180px;
+            height: 200px;
             display: flex;
             flex-direction: column;
             align-items: center;
             justify-content: center;
         }
         .team-name {
-            font-size: 20px;
+            font-size: 30px;
             font-weight: bold;
             text-align: center;
             width: 100%;
             border: none;
             background: transparent;
-            text-align: center;
             outline: none;
+            margin-bottom: 10px;
         }
         .time {
-            font-size: 50px;
+            font-size: 75px;
             font-weight: bold;
             text-align: center;
-            margin-top: 10px;
             color: red;
         }
         .selected {
@@ -188,14 +189,25 @@
             for (let i = 0; i < 4; i++) {
                 document.write(`
                     <div class="timer" data-index="${i}" id="timer-container-${i}">
-                        <input type="text" class="team-name" id="teamName${i}" value="Team ${i + 1}">
+                        <input type="text" class="team-name" id="teamName${i}" value="Team ${i + 1}" readonly>
                         <div class="time" id="timer${i}">60</div>
                     </div>
                 `);
             }
         </script>
     </div>
-</body>
-</html>
+    <div class="controls">
+        <div class="row">
+            <button onclick="startTimer()">Start</button>
+            <button onclick="stopTimer()">Stop</button>
+            <button onclick="resetTimer()">Reset</button>
+            <button onclick="adjustTime(10)">+10 sec</button>
+            <button onclick="adjustTime(20)">+20 sec</button>
+            <button onclick="adjustTime(30)">+30 sec</button>
+            <button onclick="adjustTime(40)">+40 sec</button>
+            <button onclick="adjustTime(50)">+50 sec</button>
+            <button onclick="adjustTime(-20)">-20 sec</button>
+        </div>
+    </div>
 </body>
 </html>
