--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
             for (let i = 0; i < 4; i++) {
                 document.write(`
                     <div class="timer" data-index="${i}" id="timer-container-${i}">
-                        <input type="text" class="team-name" id="teamName${i}" value="Team ${i + 1}" readonly>
+                        <input type="text" class="team-name" id="teamName${i}" value="Team ${i + 1}" readonly ondblclick="this.removeAttribute('readonly'); this.style.border='1px solid black'" onblur="this.setAttribute('readonly', true); this.style.border='none'">
                         <div class="time" id="timer${i}">60</div>
                     </div>
                 `);
@@ -198,15 +198,15 @@
     </div>
     <div class="controls">
         <div class="row">
-            <button onclick="startTimer()">Start</button>
-            <button onclick="stopTimer()">Stop</button>
-            <button onclick="resetTimer()">Reset</button>
-            <button onclick="adjustTime(10)">+10 sec</button>
-            <button onclick="adjustTime(20)">+20 sec</button>
-            <button onclick="adjustTime(30)">+30 sec</button>
-            <button onclick="adjustTime(40)">+40 sec</button>
-            <button onclick="adjustTime(50)">+50 sec</button>
-            <button onclick="adjustTime(-20)">-20 sec</button>
+            <select id="timerSelect">
+                <option value="0">Timer 1</option>
+                <option value="1">Timer 2</option>
+                <option value="2">Timer 3</option>
+                <option value="3">Timer 4</option>
+            </select>
+            <button onclick="toggleTimerVisibility()">Toon/Verberg Timer</button>
+            <input type="number" id="timeInput" placeholder="Voer seconden in">
+            <button onclick="setCustomTime()">Doorvoeren</button>
         </div>
     </div>
 </body>
