--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
             color: red;
         }
         .selected {
-            border: 3px solid red;
+            border: 10px solid red;
         }
         .controls {
             display: flex;
@@ -198,15 +198,15 @@
     </div>
     <div class="controls">
         <div class="row">
-            <select id="timerSelect">
-                <option value="0">Timer 1</option>
-                <option value="1">Timer 2</option>
-                <option value="2">Timer 3</option>
-                <option value="3">Timer 4</option>
-            </select>
-            <button onclick="toggleTimerVisibility()">Toon/Verberg Timer</button>
-            <input type="number" id="timeInput" placeholder="Voer seconden in">
-            <button onclick="setCustomTime()">Doorvoeren</button>
+            <button onclick="startTimer()">Start</button>
+            <button onclick="stopTimer()">Stop</button>
+            <button onclick="resetTimer()">Reset</button>
+            <button onclick="adjustTime(10)">+10 sec</button>
+            <button onclick="adjustTime(20)">+20 sec</button>
+            <button onclick="adjustTime(30)">+30 sec</button>
+            <button onclick="adjustTime(40)">+40 sec</button>
+            <button onclick="adjustTime(50)">+50 sec</button>
+            <button onclick="adjustTime(-20)">-20 sec</button>
         </div>
     </div>
 </body>
