--- a/index.html
+++ b/index.html
@@ -52,64 +52,6 @@
                 document.getElementById(`timer-container-${index}`).classList.add("selected");
             }
 
-            window.startTimer = function() {
-                if (intervals[selectedTimer] === null) {
-                    intervals[selectedTimer] = setInterval(() => {
-                        if (timers[selectedTimer] > 0) {
-                            timers[selectedTimer]--;
-                            updateDisplay();
-                            syncWithDatabase();
-                        } else {
-                            stopTimer();
-                        }
-                    }, 1000);
-                }
-            }
-
-            window.stopTimer = function() {
-                clearInterval(intervals[selectedTimer]);
-                intervals[selectedTimer] = null;
-            }
-
-            window.adjustTime = function(amount) {
-                timers[selectedTimer] += amount;
-                if (timers[selectedTimer] < 0) timers[selectedTimer] = 0;
-                updateDisplay();
-                syncWithDatabase();
-            }
-
-            window.resetTimer = function() {
-                timers = [60, 60, 60, 60];
-                updateDisplay();
-                syncWithDatabase();
-            }
-
-            window.toggleTimerVisibility = function() {
-                let selectedIndex = document.getElementById("timerSelect").value;
-                visibleTimers[selectedIndex] = !visibleTimers[selectedIndex];
-                updateDisplay();
-            }
-
-            window.setCustomTime = function() {
-                let newTime = parseInt(document.getElementById("timeInput").value);
-                if (!isNaN(newTime)) {
-                    timers[selectedTimer] = newTime;
-                    updateDisplay();
-                    syncWithDatabase();
-                }
-            }
-
-            document.querySelectorAll(".team-name").forEach(input => {
-                input.addEventListener("blur", (event) => {
-                    event.target.style.border = "none";
-                    event.target.setAttribute("readonly", true);
-                });
-                input.addEventListener("dblclick", (event) => {
-                    event.target.style.border = "1px solid black";
-                    event.target.removeAttribute("readonly");
-                });
-            });
-
             document.querySelectorAll(".timer").forEach((timerElement, index) => {
                 timerElement.addEventListener("click", () => {
                     selectTimer(index);
@@ -126,14 +68,38 @@
             background-color: #f5f5f5;
         }
         h1 {
-            font-size: 32px;
+            font-size: 80px;
+        }
+        .timer-container {
+            display: flex;
+            justify-content: center;
+            gap: 20px;
+            margin-bottom: 20px;
+        }
+        .timer {
+            width: 150px;
+            height: 150px;
+            border: 6px solid black;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            font-size: 90px;
+            font-weight: bold;
+            color: red;
+            background-color: white;
+        }
+        .controls {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            gap: 10px;
+            margin-top: 20px;
         }
         .row {
             display: flex;
             justify-content: center;
-            flex-wrap: wrap;
             gap: 10px;
-            margin-bottom: 10px;
         }
         button {
             background-color: red;
@@ -147,6 +113,12 @@
 </head>
 <body>
     <h1>De slimste kameraad</h1>
+    <div class="timer-container">
+        <div id="timer-container-0" class="timer"><span id="timer0">60</span></div>
+        <div id="timer-container-1" class="timer"><span id="timer1">60</span></div>
+        <div id="timer-container-2" class="timer"><span id="timer2">60</span></div>
+        <div id="timer-container-3" class="timer"><span id="timer3">60</span></div>
+    </div>
     <div class="controls">
         <div class="row">
             <button onclick="startTimer()">Start</button>
