--- a/index.html
+++ b/index.html
@@ -77,14 +77,14 @@
             margin-bottom: 20px;
         }
         .timer {
-            width: 150px;
-            height: 150px;
+            width: 200px;
+            height: 200px;
             border: 6px solid black;
             display: flex;
             flex-direction: column;
             justify-content: center;
             align-items: center;
-            font-size: 90px;
+            font-size: 100px;
             font-weight: bold;
             color: red;
             background-color: white;
@@ -108,6 +108,9 @@
             padding: 10px;
             font-size: 16px;
             border-radius: 5px;
+        }
+        .selected {
+            border: 6px solid red;
         }
     </style>
 </head>
