--- a/index.html
+++ b/index.html
@@ -4,24 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>De Slimste Kameraad</title>
-    <script defer src="https://www.gstatic.com/firebasejs/8.10.1/firebase-app.js"></script>
-    <script defer src="https://www.gstatic.com/firebasejs/8.10.1/firebase-database.js"></script>
     <script defer>
         document.addEventListener("DOMContentLoaded", () => {
-            const firebaseConfig = {
-                apiKey: "YOUR_API_KEY",
-                authDomain: "YOUR_AUTH_DOMAIN",
-                databaseURL: "https://de-slimste-kameraad-timer-ppt-default-rtdb.europe-west1.firebasedatabase.app/",
-                projectId: "YOUR_PROJECT_ID",
-                storageBucket: "YOUR_STORAGE_BUCKET",
-                messagingSenderId: "YOUR_MESSAGING_SENDER_ID",
-                appId: "YOUR_APP_ID"
-            };
-
-            firebase.initializeApp(firebaseConfig);
-            const database = firebase.database();
-            const timersRef = database.ref("timers");
-            
             let timers = [60, 60, 60, 60];
             let teamNames = ["Team 1", "Team 2", "Team 3", "Team 4"];
             let intervals = [null, null, null, null];
@@ -30,29 +14,16 @@
             
             function updateDisplay() {
                 timers.forEach((time, index) => {
-                    document.getElementById(`timer${index}`).textContent = time;
+                    document.getElementById(`time${index}`).textContent = time;
                     document.getElementById(`team-name-${index}`).textContent = teamNames[index];
-                    document.getElementById(`timer-container-${index}`).style.display = visibleTimers[index] ? "block" : "none";
+                    document.getElementById(`timer${index}`).style.display = visibleTimers[index] ? "flex" : "none";
                 });
             }
-
-            function syncWithDatabase() {
-                timersRef.set({ timers, teamNames });
-            }
-
-            timersRef.on("value", (snapshot) => {
-                const data = snapshot.val();
-                if (data && Array.isArray(data.timers) && data.timers.length === 4) {
-                    timers = data.timers;
-                    teamNames = data.teamNames || teamNames;
-                    updateDisplay();
-                }
-            });
 
             function selectTimer(index) {
                 document.querySelectorAll(".timer").forEach(el => el.classList.remove("selected"));
                 selectedTimer = index;
-                document.getElementById(`timer-container-${index}`).classList.add("selected");
+                document.getElementById(`timer${index}`).classList.add("selected");
             }
 
             function startTimer() {
@@ -60,7 +31,7 @@
                 intervals[selectedTimer] = setInterval(() => {
                     if (timers[selectedTimer] > 0) {
                         timers[selectedTimer]--;
-                        syncWithDatabase();
+                        updateDisplay();
                     }
                 }, 1000);
             }
@@ -72,12 +43,12 @@
 
             function resetTimer() {
                 timers = [60, 60, 60, 60];
-                syncWithDatabase();
+                updateDisplay();
             }
 
             function adjustTime(amount) {
                 timers[selectedTimer] = Math.max(0, timers[selectedTimer] + amount);
-                syncWithDatabase();
+                updateDisplay();
             }
 
             function toggleTimerVisibility() {
@@ -89,7 +60,7 @@
                 const inputSeconds = parseInt(document.getElementById("timeInput").value);
                 if (!isNaN(inputSeconds)) {
                     timers[selectedTimer] = inputSeconds;
-                    syncWithDatabase();
+                    updateDisplay();
                 }
             }
 
@@ -97,7 +68,7 @@
                 let newName = prompt("Voer een nieuwe teamnaam in:", teamNames[index]);
                 if (newName) {
                     teamNames[index] = newName;
-                    syncWithDatabase();
+                    updateDisplay();
                 }
             }
 
@@ -106,6 +77,7 @@
             });
 
             selectTimer(0);
+            updateDisplay();
         });
     </script>
     <style>
@@ -136,6 +108,12 @@
             color: red;
             background-color: white;
             border-radius: 20px;
+            cursor: pointer;
+        }
+        .team-name {
+            font-size: 60px;
+            font-weight: bold;
+            color: black;
         }
         .controls {
             display: flex;
@@ -164,6 +142,24 @@
 </head>
 <body>
     <h1>De slimste kameraad</h1>
+    <div class="timer-container">
+        <div class="timer" id="timer0" onclick="selectTimer(0)">
+            <div class="team-name" id="team-name-0" onclick="editTeamName(0)">Team 1</div>
+            <div class="time-display" id="time0">60</div>
+        </div>
+        <div class="timer" id="timer1" onclick="selectTimer(1)">
+            <div class="team-name" id="team-name-1" onclick="editTeamName(1)">Team 2</div>
+            <div class="time-display" id="time1">60</div>
+        </div>
+        <div class="timer" id="timer2" onclick="selectTimer(2)">
+            <div class="team-name" id="team-name-2" onclick="editTeamName(2)">Team 3</div>
+            <div class="time-display" id="time2">60</div>
+        </div>
+        <div class="timer" id="timer3" onclick="selectTimer(3)">
+            <div class="team-name" id="team-name-3" onclick="editTeamName(3)">Team 4</div>
+            <div class="time-display" id="time3">60</div>
+        </div>
+    </div>
     <div class="controls">
         <div class="row">
             <button onclick="startTimer()">Start</button>
